Closed Bug 260437 Opened 20 years ago Closed 19 years ago

"Set as Wallpaper" changes wallpaper for all users (should not save in windows directory)

Categories

(Firefox :: Shell Integration, defect)

x86
Windows XP
defect
Not set
minor

Tracking

()

RESOLVED FIXED
Firefox1.5

People

(Reporter: nicholas, Assigned: torisugari)

References

Details

Attachments

(2 files, 5 obsolete files)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; rv:1.7.3) Gecko/20040913 Firefox/0.10
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; rv:1.7.3) Gecko/20040913 Firefox/0.10

Because it appears that Firefox uses a single wallpaper file:
C:\Windows\Firefox Wallpaper.bmp

If a PC contains multiplul user accounts, and each user has used Firefox to
change their wallpaper. When one user changes their wallpaper using the "Set as
Wallpaper" option in Firefox, it will change the wallpaper for every other user.

Instead of having every user's wallpaper linked to "C:\Windows\Firefox
Wallpaper.bmp" it would be better to have a single wallpaper file specific to
each user account on the PC.

Occurs only if each user has used Firefox to set their wallpaper.

Reproducible: Always
Steps to Reproduce:
1. Log in to any user account on the system
2. Launch Firefox and use the "Set as Wallpaper" option
3. Use the Windows "Switch User" function to quickly go into another user account
4. Launch Firefox and use the "Set as Wallpaper" option
5. Log out of the second user account and log back into the original user account
6. The wallpaper will now be the same as the one set in the 2nd user account.

Actual Results:  
Wallpaper for all users who have used Firefox to set their wallpaper will be
changed.

Expected Results:  
Each individual user should retain their own wallpaper.

Would be beneficial to have this fixed by 1.0 because I imagne that its simple
things like this that would cause users to switch back to IE.
(In reply to comment #0)
> Because it appears that Firefox uses a single wallpaper file:
> C:\Windows\Firefox Wallpaper.bmp

Bug 181273 is about this.  Its comment 0 observes
> multiple users will all share the same wallpaper file :-(
Assignee: guifeatures → firefox
Component: XP Apps: GUI Features → General
Depends on: 181273
Product: Browser → Firefox
QA Contact: firefox.general
Confirming depends.
Severity: normal → minor
Status: UNCONFIRMED → NEW
Component: General → OS Integration
Ever confirmed: true
Summary: "Set as Wallpaper" changes wallpaper for all users → "Set as Wallpaper" changes wallpaper for all users (should not save in windows directory)
Version: Trunk → unspecified
Attachment #169602 - Attachment is obsolete: true
Attached patch Patch v1.1 (for firefox) (obsolete) — Splinter Review
firefox version of bug 181273

The file path changed
from c:\\windows\Firefox Wallpaper.bmp
to %AppData%\Mozilla\Firefox\Firefox Wallpaper.bmp
Attachment #169794 - Flags: review?(firefox)
Blocks: 276299
Flags: blocking-aviary1.1?
I've just noticed the patch in bug 257803 was
checked in...
Attachment #169794 - Attachment is obsolete: true
Attachment #169794 - Flags: review?(firefox)
Attached patch Patch v1.2 (for firefox) (obsolete) — Splinter Review
Updated.
Attachment #171537 - Flags: review?(mconnor)
Flags: blocking-aviary1.1? → blocking-aviary1.1+
Wouldn't it make more sense to store the wallpaper somewhere in the
"%userprofile%\My Documents" tree?  Perhaps "%userprofile%\My Documents\My
Pictures" ?

If someone decided to blow away their Firefox install for some reason (including
the profile folders, etc.), they'd probably not be intending to erase their
wallpaper if they're still using it.  I'd argue it doesn't belong in Fx's app
data area because after saving, Firefox never has a need to reopen the file.

My $0.02.
That's a good idea, but don't assume My Documents is in %userprofile%\My
Documents, there's a separate variable for the location of My Documents since it
can be in a custom location (the same goes for My Pictures, for that matter).
(In reply to comment #7)
> Wouldn't it make more sense to store the wallpaper somewhere in the
> "%userprofile%\My Documents" tree?  Perhaps "%userprofile%\My Documents\My
> Pictures" ?

I also think it makes some sense. However, well, please take a look at
bug 181273 , especially timeless' comments.

IMHO, your concern doesn't balnce out the old decision. Though I can be totally
wrong, for firefox doesn't seem as sensitive about compatibility issues
as seamonkey is.

Anyway, it's up to the module owner/peers.
Attachment #171537 - Flags: review?(mconnor) → review+
Assignee: firefox → torisugari
Attached patch Patch v1.3 (for firefox) (obsolete) — Splinter Review
1. bug 274374 made the old patch obsolete.
2. Fixed a regression between bug 282057 and bug 274374
(chrome://global/ <-> chrome://branding/)
3. Inserted error checks.
4. Fixed comments.
Attachment #171537 - Attachment is obsolete: true
Attachment #190100 - Flags: review?(mconnor)
Attachment #190100 - Flags: approval1.8b4?
Flags: blocking1.8b4?
Comment on attachment 190100 [details] [diff] [review]
Patch v1.3 (for firefox)

1) Since the file is in appdata/Mozilla/Firefox anyway, why call it "Firefox
Background.bmp"... just call it "Desktop Background.bmp".
Attachment #190100 - Flags: review?(mconnor)
Attachment #190100 - Flags: review-
Attachment #190100 - Flags: approval1.8b4?
Attached patch Patch v1.4 (for firefox) (obsolete) — Splinter Review
(In reply to comment #11)
>  "Firefox Background.bmp"... just call it "Desktop Background.bmp".
OK.

BTW, on linux, wallpaper file name is "%HOME%/Firefox_Wallpaper.png".
http://lxr.mozilla.org/mozilla/source/browser/components/shell/src/nsGNOMEShellService.cpp#416


I'm not too sure why the patch for mac (attachment 186667 [details] [diff] [review]) fixed the windows
intl
problem and did not fix that of linux, but I think it should be localizable as
well.
Maybe in a separated bug.
Attachment #190100 - Attachment is obsolete: true
Attachment #190160 - Flags: review?(benjamin)
If this is gonna make 1.5, we need this patch in sooner rather than later. 
Flags: blocking1.8b4? → blocking1.8b4+
Whiteboard: [has patch, needs review (benjamin)]
Comment on attachment 190160 [details] [diff] [review]
Patch v1.4 (for firefox)

Please rename the properties key "desktopBackgroundFileNameWin" so that it will
break the compare-locales script (any time you significantly change a localized
string you should rename the key).
Attachment #190160 - Flags: review?(benjamin) → review+
Attached patch Patch v1.5Splinter Review
(In reply to comment #14)
> Please rename the properties key "desktopBackgroundFileNameWin" so that it
will
> break the compare-locales script (any time you significantly change a
localized
> string you should rename the key).

Renamed it.
Attachment #190160 - Attachment is obsolete: true
Attachment #190280 - Flags: review?(benjamin)
(In reply to comment #11)
> why call it "Firefox Background.bmp"

Something reminds me that "Display Properties" (right
click on the desktop and select "Properties" and
"Desktop" tab) shows the list of background files.

Therefore a file name which contains the brand name,
such as "Firefox Background" or "Background by Firefox",
is not so meaningless.
Attachment #190280 - Flags: review?(benjamin)
Attachment #190280 - Flags: review+
Attachment #190280 - Flags: approval1.8b4+
Checking in mozilla/browser/components/shell/src/nsWindowsShellService.cpp;
/cvsroot/mozilla/browser/components/shell/src/nsWindowsShellService.cpp,v  <--
nsWindowsShellService.cpp
new revision: 1.21; previous revision: 1.20
done
Checking in mozilla/browser/locales/en-US/chrome/browser/shellservice.properties;
/cvsroot/mozilla/browser/locales/en-US/chrome/browser/shellservice.properties,v
<--  shellservice.properties
new revision: 1.5; previous revision: 1.4
done
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: [has patch, needs review (benjamin)]
Target Milestone: --- → Firefox1.1
Version: unspecified → Trunk
*** Bug 302311 has been marked as a duplicate of this bug. ***
*** Bug 304516 has been marked as a duplicate of this bug. ***
*** Bug 317160 has been marked as a duplicate of this bug. ***
Depends on: 321770
*** Bug 321770 has been marked as a duplicate of this bug. ***
No longer depends on: 321770
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: