Bug 260437 : "Set as Wallpaper" changes wallpaper for all users (should not save in windows directory), patch by O. Atsushi (Torisugari) <torisugari@gmail.com>, r+a=bsmedberg